--- a/style.css
+++ b/style.css
@@ -487,6 +487,13 @@ section h2 {
     background: #5568d3;
 }
 
+.circuit-conditions-summary {
+    color: #999;
+    font-size: 0.75em;
+    margin-top: 6px;
+    line-height: 1.4;
+}
+
 .circuit-tile-right {
     text-align: right;
 }
